# deebee.nvim

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md
.github/workflows/: release.yml
crates/deebee-worker/: Cargo.toml
crates/deebee-worker/src/: main.rs
docker/postgres/: Dockerfile
docker/postgres/initdb/: 10-schema.sql  20-seed.sql  30-views.sql
docs/: agent-handbook.md  architecture.md  configuration.md  decision-log.md  editable-grid-poc.md  editable-grid-spec.md  implementation-spec.md  local-postgres-testing.md  release-distribution.md  roadmap.md  rpc-protocol.md
lua/deebee/: commands.lua  config.lua  constants.lua  health.lua  init.lua  installer.lua  notify.lua  rpc.lua  state.lua  util.lua  worker.lua
lua/deebee/grid/: results.lua
lua/deebee/ui/: workspace.lua
plugin/: deebee.lua
scripts/: generate_release_manifest.py
