[package]
name = "deebee-worker"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust worker for deebee.nvim"
repository = "https://github.com/Kamyil/deebee.nvim"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt-multi-thread"] }
tokio-postgres = "0.7"
